--- a/.github/workflows/IPQ-More.yml
+++ b/.github/workflows/IPQ-More.yml
@@ -1,13 +1,13 @@
 #CI项目
-name: OWRT-ALL
+name: IPQ-More
 
 #CI计划
 on:
-  # #自动编译：当Auto-Clean运行完成后
-  # workflow_run:
-  #   workflows: ["Auto-Clean"]
-  #   types:
-  #     - completed
+  #自动编译：当Auto-Clean运行完成后
+  workflow_run:
+    workflows: ["Auto-Clean"]
+    types:
+      - completed
   #手动编译
   workflow_dispatch:
     inputs:
@@ -32,9 +32,9 @@ jobs:
       fail-fast: false
       #max-parallel: 3
       matrix:
-        CONFIG: [MEDIATEK, ROCKCHIP, X86]
-        SOURCE: [VIKINGYFY/immortalwrt]
-        BRANCH: [owrt]
+        CONFIG: [IPQ60XX-WIFI-NO]
+        # LiBwrt-op/openwrt-6.x, VIKINGYFY/immortalwrt, coolsnowwolf/lede, King-Of-Knights/openwrt-6.x
+        SOURCE: [LiBwrt-op/openwrt-6.x, VIKINGYFY/immortalwrt, coolsnowwolf/lede, King-Of-Knights/openwrt-6.x]
 
     #调用公用编译核心WRT-CORE.yml
     uses: ./.github/workflows/WRT-CORE.yml
@@ -44,19 +44,19 @@ jobs:
       #默认主题
       WRT_THEME: argon
       #默认主机名
-      WRT_NAME: OWRT
+      WRT_NAME: 
       #默认WIFI名称
-      WRT_SSID: OWRT
+      WRT_SSID: 
       #默认WIFI密码
-      WRT_WORD: 12345678
+      WRT_WORD: 
       #默认地址
-      WRT_IP: 192.168.10.1
+      WRT_IP: 10.10.2.40
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
       WRT_REPO: https://github.com/${{matrix.SOURCE}}.git
       #源码分支
-      WRT_BRANCH: ${{matrix.BRANCH}}
+      WRT_BRANCH: 
       #源码名称
       WRT_SOURCE: ${{matrix.SOURCE}}
       #插件调整
