--- a/.github/workflows/X86-More.yml
+++ b/.github/workflows/X86-More.yml
@@ -1,5 +1,5 @@
 #CI项目
-name: IPQ-More
+name: X86-More
 
 #CI计划
 on:
@@ -32,8 +32,8 @@ jobs:
       fail-fast: false
       #max-parallel: 3
       matrix:
-        CONFIG: [IPQ60XX-WIFI-NO]
-        SOURCE: [LiBwrt-op/openwrt-6.x, VIKINGYFY/immortalwrt, King-Of-Knights/openwrt-6.x]
+        CONFIG: [X86]
+        SOURCE: [openwrt/openwrt, immortalwrt/immortalwrt]
 
     #调用公用编译核心WRT-CORE.yml
     uses: ./.github/workflows/WRT-CORE.yml
@@ -49,7 +49,7 @@ jobs:
       #默认WIFI密码
       WRT_WORD: 
       #默认地址
-      WRT_IP: 10.10.2.40
+      WRT_IP: 10.10.2.41
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
