--- a/.github/workflows/IPQ-More.yml
+++ b/.github/workflows/IPQ-More.yml
@@ -33,7 +33,8 @@ jobs:
       #max-parallel: 3
       matrix:
         CONFIG: [IPQ60XX-WIFI-NO]
-        SOURCE: [LiBwrt-op/openwrt-6.x, VIKINGYFY/immortalwrt, King-Of-Knights/openwrt-6.x]
+        # King-Of-Knights/openwrt-6.x, 
+        SOURCE: [LiBwrt-op/openwrt-6.x, VIKINGYFY/immortalwrt]
 
     #调用公用编译核心WRT-CORE.yml
     uses: ./.github/workflows/WRT-CORE.yml
